--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,8 +37,8 @@ jobs:
     - name: environnement
       run: echo ! $DJANGO_SECRET_KEY !
     - name: Test with pytest
-      env: |
-        DJANGO_DEBUG: False
+      env: 
+        DJANGO_DEBUG: 'False'
         DJANGO_SECRET_KEY: 'fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s'
       run: |
         pytest
