--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,9 +38,8 @@ jobs:
       run: echo ! $DJANGO_SECRET_KEY !
           echo ! var.$DJANGO_SECRET_KEY !
           echo ! {d} !
-          echo "DJANGO_SECRET_KEY: $DJANGO_SECRET_KEY"
-          echo "VAR_DJANGO_SECRET_KEY: $VAR_DJANGO_SECRET_KEY"
-          echo "d: $d"
+          echo DJANGO_SECRET_KEY.$DJANGO_SECRET_KEY
+          echo VAR_DJANGO_SECRET_KEY.$VAR_DJANGO_SECRET_KEY
 
     - name: Test with pytest
       env: 
