--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -34,12 +34,10 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: environnement
-      run: echo ! $SECRET_KEY !
     - name: Test with pytest
       env: 
         DJANGO_DEBUG: 'False'
-        DJANGO_SECRET_KEY: 'fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s'
+        DJANGO_SECRET_KEY: vars.DJANGO_SECRET_KEY
       run: |
         pytest
     - name: Build coverage
