--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,12 +38,17 @@ jobs:
       env: 
         DJANGO_DEBUG: 'False'
         DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
       run: |
-        python manage.py test
+        pytest
     - name: Build coverage
       run: |
         coverage run ./manage.py test
         coverage xml
+      env: 
+        DJANGO_DEBUG: 'False'
+        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+        DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
     - name: Test coverage
       uses: themichaelhall/check-code-coverage@v2
       with:
