--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -3,6 +3,11 @@
 
 name: local-tests-linting
 
+env: 
+  DJANGO_DEBUG: 'False'
+  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+  DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
+
 on:
   push:
     branches: [ "dev" ]
@@ -26,7 +31,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
       run: |
@@ -35,15 +39,6 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      env: 
-        DJANGO_DEBUG: 'False'
-        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-        DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
-      run: |
-        pytest
+      run: pytest
     - name: Test coverage
       run: pytest --cov="." --cov-fail-under=85
-      env: 
-        DJANGO_DEBUG: 'False'
-        DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-        DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
