--- a/.github/workflows/actions-CI.yml
+++ b/.github/workflows/actions-CI.yml
@@ -1,27 +1,18 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: local-tests-linting
-
+name: validate-dev-push
 env: 
   DJANGO_DEBUG: 'False'
   DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
   DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
-
 on:
   push:
     branches: [ "dev" ]
   pull_request:
     branches: [ "dev" ]
-
 permissions:
   contents: read
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python 3.12.2
