--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -1,9 +1,3 @@
-  # on master push or pull request
-# définir les variables d'environnement
-# build image docker
-# push l'image docker sur dockerhub
-# pull l'image sur AWS
-
 name: master-push
 on:
   push:
@@ -17,8 +11,28 @@ jobs:
   name: Push Docker image to Docker Hub
   runs-on: ubuntu-latest
   steps:
-    - name: Check out the repo
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v3
+
+    - name: Set up Python 3.12.2
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.12.2"
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+    - name: Lint with flake8
+      run: |
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=99 --statistics
+
+    - name: Test with pytest
+      run: pytest
+
+    - name: Test coverage
+      run: pytest --cov="." --cov-fail-under=85
 
     - name: Log in to Docker Hub
       uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
@@ -30,17 +44,16 @@ jobs:
       id: meta
       uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
       with:
-        images: ryad364/projet-oc-letting
+        images:  ${{ secrets.DOCKER_HUB_IMAGE }}
 
     - name: Build and push Docker image
       uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
       with:
         context: .
-        file: ./Dockerfile
+        file: ./prod-Dockerfile
         push: true
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
-    - name: push Docker image in AWS 
-      uses: aws ecr get-login-password --region region | docker login AWS_USERNAME AWS AWS_PASSWORD-stdin aws_account_id.dkr.ecr.region.amazonaws.com
 
-  
+    - name: push Docker image in AWS 
+      uses: aws ecr get-login-password --region region | docker login ${{ secrets.AWS_USER }} AWS ${{ secrets.AWS_PASSWORD }} -stdin aws_account_id.dkr.ecr.region.amazonaws.com
