--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -1,4 +1,8 @@
 name: master-push
+env: 
+  DJANGO_DEBUG: 'True'
+  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+  DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
 on:
   push:
     branches: [ "master" ]
@@ -20,7 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
 
     - name: Lint with flake8
       run: |
