--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -1,19 +1,13 @@
 name: master-push
-env: 
-  DJANGO_DEBUG: 'True'
-  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
-  DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
+
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
-permissions:
-  contents: read
 
 jobs:
-  runs-on: ubuntu-latest
-  steps:
+  lint_and_test:
     - uses: actions/checkout@v3
 
     - name: Set up Python 3.12.2
@@ -37,26 +31,27 @@ jobs:
     - name: Test coverage
       run: pytest --cov="." --cov-fail-under=85
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+  push_to_registry:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in to Docker Hub
+        uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
-      with:
-        images:  ${{ secrets.DOCKER_HUB_IMAGE }}
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images:  ${{ secrets.DOCKER_HUB_IMAGE }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-      with:
-        context: .
-        file: ./prod-Dockerfile
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-
-    - name: push Docker image in AWS 
-      uses: aws ecr get-login-password --region region | docker login ${{ secrets.AWS_USER }} AWS ${{ secrets.AWS_PASSWORD }} -stdin aws_account_id.dkr.ecr.region.amazonaws.com
+      - name: Build and push Docker image
+        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
+        with:
+          context: .
+          file: ./prod-Dockerfile
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
