--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -8,7 +8,8 @@ on:
 
 jobs:
   lint_and_test:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Set up Python 3.12.2
       uses: actions/setup-python@v3
