--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   lint_and_test:
+    name: Lint and test
+    runs-on: ubuntu-latest
+    steps:
     - name: Checkout
       uses: actions/checkout@v3
 
