--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -1,5 +1,8 @@
 name: master-push
-
+env: 
+  DJANGO_DEBUG: 'False'
+  DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+  DJANGO_SETTINGS_MODULE: oc_lettings_site.settings
 on:
   push:
     branches: [ "master" ]
@@ -31,6 +34,8 @@ jobs:
 
     - name: Test with pytest
       run: pytest
+      env:
+        DJANGO_DEBUG: 'True'
 
     - name: Test coverage
       run: pytest --cov="." --cov-fail-under=85
