--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -42,6 +42,7 @@ jobs:
 
   push_to_registry:
     name: Push Docker image to Docker Hub
+    needs: lint_and_test
     runs-on: ubuntu-latest
     steps:
       - name: Log in to Docker Hub
@@ -60,7 +61,7 @@ jobs:
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: ./prod-Dockerfile
+          file: ${{ defaultContext }}/prod-Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
