--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -68,7 +68,7 @@ jobs:
   deploy_on_heroku:
     name: Deploy repo image to Heroku
     needs: push_to_registry
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     steps:
       - name: Build, Push and Deploy to Heroku
         id: heroku
