--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
-          file: prod-Dockerfile
+          file: Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -70,12 +70,14 @@ jobs:
     needs: push_to_registry
     runs-on: ubuntu-latest
     steps:
-      - name: Build, Push and Deploy to Heroku
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build, Push and Deploy to Heroku # set whatever name you want to this step
         id: heroku
-        uses: jctaveras/heroku-deploy@v1.0.0
+        uses: jctaveras/heroku-deploy@v1.0.0 # use the latest version of the action
         with:
-          email: ${{ secrets.HEROKU_EMAIL }}
-          api_key: ${{ secrets.HEROKU_API_KEY }}
-          app_name: ${{ secrets.HEROKU_APP_NAME }}
-          dockerfile_path: './prod-Dockerfile'
-          process_type: 'web'
+          email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
+          api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
+          app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
+          dockerfile_path: './prod' # set the path to the folder where the Dockerfile is located
+          process_type: 'web' # Specify the process type you want to build and release
