--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -74,9 +74,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Build, Push and Deploy to Heroku # set whatever name you want to this step
         id: heroku
-        uses: jctaveras/heroku-deploy@v1.0.0 # use the latest version of the action
+        uses: jctaveras/heroku-deploy@v3.1.0 # use the latest version of the action
         with:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
           app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
-          dockerfile: './prod/Dockerfile' # set the path to the folder where the Dockerfile is located
+          dockerfile: 'prod/Dockerfile' # set the path to the folder where the Dockerfile is located
