--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -79,5 +79,5 @@ jobs:
           email: ${{ secrets.HEROKU_EMAIL }} # your heroku email
           api_key: ${{ secrets.HEROKU_API_KEY }} # your heroku api key
           app_name: ${{ secrets.HEROKU_APP_NAME }} # you aplication name
-          dockerfile_path: './prod' # set the path to the folder where the Dockerfile is located
+          dockerfile_path: './prod/Dockerfile' # set the path to the folder where the Dockerfile is located
           process_type: 'web'
