--- a/.github/workflows/actions-CD.yml
+++ b/.github/workflows/actions-CD.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements-prod.txt
 
     - name: Lint with flake8
       run: |
@@ -34,8 +34,6 @@ jobs:
 
     - name: Test with pytest
       run: pytest
-      env:
-        DJANGO_DEBUG: 'True'
 
     - name: Test coverage
       run: pytest --cov="." --cov-fail-under=85
