--- a/procfile
+++ b/procfile
@@ -1,1 +1,1 @@
-web: gunicorn oc_lettings_site.wsgi --log-file - --bind 0.0.0.0:$PORT
+web: gunicorn oc_lettings_site.wsgi --preload --log-file - --bind 0.0.0.0:$PORT
